# zoom-monday-rtmp-demo

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/nginx/: mondayzoom-hls-site.conf.example  nginx.conf.example  rtmp.conf.example
deploy/node_red/: zoom_control_flow.json  zoom_webhook_hls_flow.json
deploy/scripts/: bootstrap_debian_host.sh  run_zoom_cli.sh
docs/: architecture.md  setup.md  zoom_app_setup.md
src/zoom_monday_rtmp_demo/: cli.py  config.py  http.py
src/zoom_monday_rtmp_demo/adapters/: monday_api.py  zoom_api.py
src/zoom_monday_rtmp_demo/services/: recording_watcher.py
tests/: test_cli.py  test_config.py  test_recording_watcher.py  test_zoom_api.py
