[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zoom-monday-rtmp-demo"
version = "0.1.0"
description = "Clean Zoom + RTMP + monday.com starter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32,<3",
]

[project.scripts]
zmrd = "zoom_monday_rtmp_demo.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

